[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acmen"
version = "0.4.2"
authors = [{ name = "Explr" }]
description = "An ACME(RFC8555) client implementation in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "dnspython == 2.*",
    "requests == 2.*",
    "tld == 0.13.*",
    "jwcrypto == 1.*",
    "cryptography == 39.*"
]

[project.urls]
"Homepage" = "https://github.com/CBPJ/AcmeN"
"Bug Tracker" = "https://github.com/CBPJ/AcmeN/issues"